# OOP_labs

./: .gitignore  README.md
java_nsu/task1/: .gitignore  build.gradle  task.md
java_nsu/task1/src/main/java/: Main.java
java_nsu/task1/src/test/java/: AddCommandTest.java  DivCommandTest.java  MultCommandTest.java  PopCommandTest.java  PrintCommandTest.java  SqrtCommandTest.java
labs_c++/FlatMap/: CMakeLists.txt  CellSearcher.cpp  CellSearcher.h  FlatMap.cpp  FlatMap.h  README.md  SizeManager.cpp  SizeManager.h  test.cpp  Тесты.lnk
labs_c++/WAV_Converter/: Audio_converter.h  CMakeLists.txt  ConvertFile.cpp  ConvertFile.h  Converters.cpp  Converters.h  README.md  Sound_Processor.cpp  Sound_Processor.h  WAV_components.cpp  WAV_components.h  WAVfile.cpp  WAVfile.h  file_work.cpp  file_work.h  general_include.h  main.cpp  my_exceptions.h
labs_java/lab1/: build.gradle  settings.gradle
labs_java/lab1/src/main/java/: Main.java
labs_java/lab1/src/test/java/: AddCommandTest.java  DefineCommandTest.java  (+5 more)
labs_java/lab2Tetris/: leaderboard.txt
labs_java/lab2Tetris/src/: Tetris.java
labs_java/lab2Tetris/src/controller/: Controller.java
labs_java/lab2Tetris/src/model/: ActiveFigure.java  Background.java  Coords.java  Figure.java  GameThread.java  Model.java  PlayerScore.java
labs_java/lab2Tetris/src/view/: AboutPanel.java  Board.java  Config.java  Control.java  GamePanel.java  LeaderBoard.java  MainMenu.java  Window.java
savenko/task1/: file.csv
savenko/task1/src/: Main.java
savenko/task1/src/model/: CsvFile.java
task1_java/src/: Main.java
(+25 files in other folders)
